--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,32 +1,59 @@
-<form #f="ngForm" (ngSubmit)="save(f.value)">
-    <div class="form-group">
-        <label for="title">Title</label>
-        <input ngModel name="title" id="title" type="text" class="form-control">
-    </div>
-
-    <div class="form-group">
-        <label for="price">Price</label>
-        <div class="input-group">
-            <div class="input-group-prepend">
-                <span class="input-group-text">€</span>
+<div class="row">
+    <div class="col-12 col-md-3">
+        <div class="card">
+            <img [src]="product.imageUrl" class="card-img-top" *ngIf="product.imageUrl">
+            <div class="card-body">
+              <h5 class="card-title">{{ product.title }}</h5>
+              <p class="card-text">{{ product.price | currency:'EUR':true }}</p>
             </div>
-            <input  ngModel name="price" id="price" type="number" class="form-control">
         </div>
     </div>
-
-    <div class="form-group">
-        <label for="category">Category</label>
-        <select  ngModel name="category" id="category" class="form-control">
-            <option value=""></option>
-            <option *ngFor="let c of categories$ | async" [value]="c.key">{{c.payload.val().name}}</option>
-        </select>
+    <div class="col-12 col-md-9">
+        <form #f="ngForm" (ngSubmit)="save(f.value)">
+            <div class="form-group">
+                <label for="title">Titre</label>
+                <input #title="ngModel" [(ngModel)]="product.title" name="title" id="title" type="text" class="form-control" required>
+                <div class="alert alert-danger" *ngIf="title.touched && title.invalid">
+                    Le titre est obligatoire !
+                </div>
+            </div>
+        
+            <div class="form-group">
+                <label for="price">Prix</label>
+                <div class="input-group">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">€</span>
+                    </div>
+                    <input #price="ngModel"  [(ngModel)]="product.price" name="price" id="price" type="number" class="form-control" required>
+                </div>
+                <div class="alert alert-danger" *ngIf="price.touched && price.invalid">
+                    <div *ngIf="price.errors.required">Le prix est obligatoire !</div>
+                </div>
+            </div>
+        
+            <div class="form-group">
+                <label for="category">Catégorie</label>
+                <select #category="ngModel"  [(ngModel)]="product.category" name="category" id="category" class="form-control" required>
+                    <option value=""></option>
+                    <option *ngFor="let c of categories$ | async" [value]="c.key">{{c.payload.val().name}}</option>
+                </select>
+                <div class="alert alert-danger" *ngIf="category.touched && category.invalid">
+                    La catégorie est obligatoire !
+                </div>
+            </div>
+        
+            <div class="form-group">
+                <label for="imageUrl">Image URL</label>
+                <input #imageUrl="ngModel"  [(ngModel)]="product.imageUrl" name="imageUrl" id="imageUrl" type="text" class="form-control" required url>
+                <div class="alert alert-danger" *ngIf="imageUrl.touched && imageUrl.invalid">
+                    <div *ngIf="price.errors.required">L'image URL est obligatoire !</div>
+                    <div *ngIf="price.errors.url">Il faut une URL valide !</div>
+                </div>
+            </div>
+        
+            <button class="btn btn-primary">Sauvegarder</button>
+            <button type="button" class="btn btn-danger" (click)="delete()">Supprimer</button>
+            
+        </form>
     </div>
-
-    <div class="form-group">
-        <label for="imageUrl">Image URL</label>
-        <input  ngModel name="imageUrl" id="imageUrl" type="text" class="form-control">
-    </div>
-
-    <button class="btn btn-primary">Save product</button>
-    
-</form>
+</div>
