--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,12 @@
-<p>products works!</p>
+<div class="row">
+    <div class="col-12 col-md-3">
+        <product-filter [category]='category'></product-filter>
+    </div>
+    <div class="col-12 col-md-9">
+        <div class="row">
+            <div class="col-6 col-md-4" *ngFor="let product of filteredProducts">
+                <product-card [product]='product' ></product-card>
+            </div>
+        </div>
+    </div>
+</div>
