adding or removing items in a shopping cart

--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-12 col-md-3">
-        <product-card [product]="product" [showAction]="false"></product-card>
+        <product-card [product]="product" [showActions]="false"></product-card>
     </div>
     <div class="col-12 col-md-9">
         <form #f="ngForm" (ngSubmit)="save(f.value)">
