--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -4,7 +4,19 @@
       <h5 class="card-title">{{ product.title }}</h5>
       <p class="card-text">{{ product.price | currency:'EUR':'symbol' }}</p>
     </div>
-    <div *ngIf="showAction" class="card-footer">
-      <a href="#" class="btn btn-primary form-control">Ajouter au panier</a>
+    <div *ngIf="showActions" class="card-footer">
+      <button *ngIf="getQuantity() === 0; else updateQuantity" class="btn btn-secondary form-control" (click)="addToCart()">Ajouter au panier</button>
+      <ng-template #updateQuantity>
+        <div class="row no-gutters">
+          <div class="col-2">
+            <button (click)="removeFromCart()" class="btn btn-secondary btn-block">-</button>
+          </div>
+          <div class="col-8 cartQuantity">{{ getQuantity() }} dans le panier</div>
+          <div class="col-2">
+            <button (click)="addToCart()" class="btn btn-secondary btn-block">+</button>
+          </div>
+        </div>
+        
+      </ng-template>
     </div>
 </div>
