--- a/src/app/product-card/product-card.component.scss
+++ b/src/app/product-card/product-card.component.scss
@@ -7,4 +7,9 @@
     .card-footer {
         padding: 0;
     }
+    .cartQuantity {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
