--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,1 +1,37 @@
-<p>shopping-cart works!</p>
+<h1>Votre Panier</h1>
+
+<ng-container *ngIf="cart$ | async as cart">
+    <p>Vous avez {{ cart.totalItemsCount }} produits dans votre panier</p>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Produit</th>
+                <th>Quantité</th>
+                <th>Prix</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of cart.items">
+                <td>
+                    {{ item.product.title }}
+                </td>
+                <td>
+                    {{ item.quantity }}
+                </td>
+                <td>
+                    {{ item.totalPrice | currency:'EUR':'symbol' }}
+                </td>
+            </tr>
+        </tbody>
+        <tfoot *ngIf="cart.items.length > 0">
+            <tr>
+                <th></th>
+                <th></th>
+                <th>
+                    {{ cart.totalPrice | currency:'EUR':'symbol' }}
+                </th>
+            </tr>
+        </tfoot>
+    </table>
+</ng-container>
