--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -6,20 +6,24 @@
     <table class="table">
         <thead>
             <tr>
+                <th></th>
                 <th>Produit</th>
-                <th>Quantité</th>
-                <th>Prix</th>
+                <th class="text-center">Quantité</th>
+                <th class="text-right">Prix</th>
             </tr>
         </thead>
         <tbody>
             <tr *ngFor="let item of cart.items">
                 <td>
+                    <img class="product-avatar" src="{{item.product.imageUrl}}" alt="{{item.product.title}}">
+                </td>
+                <td class="cart-cells product">
                     {{ item.product.title }}
                 </td>
-                <td>
-                    {{ item.quantity }}
+                <td class="cart-cells quantity text-center">
+                    <product-quantity [product]="item.product" [shoppingCart]="cart"></product-quantity>
                 </td>
-                <td>
+                <td class="cart-cells price text-right">
                     {{ item.totalPrice | currency:'EUR':'symbol' }}
                 </td>
             </tr>
@@ -28,10 +32,13 @@
             <tr>
                 <th></th>
                 <th></th>
-                <th>
+                <th class="text-right">Total :</th>
+                <th class="text-right">
                     {{ cart.totalPrice | currency:'EUR':'symbol' }}
                 </th>
             </tr>
         </tfoot>
     </table>
+
+    <button (click)="clearCart()" class="btn btn-danger btn-sm">Vider le panier</button>
 </ng-container>
