--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,1 +1,44 @@
-<p>shopping-cart works!</p>
+<h1>Votre Panier</h1>
+
+<ng-container *ngIf="cart$ | async as cart">
+    <p>Vous avez {{ cart.totalItemsCount }} produits dans votre panier</p>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Produit</th>
+                <th class="text-center">Quantité</th>
+                <th class="text-right">Prix</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of cart.items">
+                <td>
+                    <img class="product-avatar" src="{{item.product.imageUrl}}" alt="{{item.product.title}}">
+                </td>
+                <td class="cart-cells product">
+                    {{ item.product.title }}
+                </td>
+                <td class="cart-cells quantity text-center">
+                    <product-quantity [product]="item.product" [shoppingCart]="cart"></product-quantity>
+                </td>
+                <td class="cart-cells price text-right">
+                    {{ item.totalPrice | currency:'EUR':'symbol' }}
+                </td>
+            </tr>
+        </tbody>
+        <tfoot *ngIf="cart.items.length > 0">
+            <tr>
+                <th></th>
+                <th></th>
+                <th class="text-right">Total :</th>
+                <th class="text-right">
+                    {{ cart.totalPrice | currency:'EUR':'symbol' }}
+                </th>
+            </tr>
+        </tfoot>
+    </table>
+
+    <button (click)="clearCart()" class="btn btn-danger btn-sm">Vider le panier</button>
+</ng-container>
