--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -1,1 +1,48 @@
-<p>check-out works!</p>
+<h1>Informations de livraison</h1>
+
+<div class="row">
+    <div class="col-12 col-md-6">
+        <form #f="ngForm">
+            <div class="form-group">
+                <label for="">Nom</label>
+                <input #name="ngModel" name="name" [(ngModel)]="shipping.name" type="text" class="form-control" required>
+                <div class="alert alert-danger" *ngIf="name.touched && name.invalid">
+                    <p>Le nom est obligatoire !</p>
+                </div>
+            </div>
+        
+            <div class="form-group">
+                <label for="">Adresse</label>
+                <input #addressLine1="ngModel" name="addressLine1" [(ngModel)]="shipping.addressLine1" type="text" class="form-control" required>
+                <div class="alert alert-danger" *ngIf="addressLine1.touched && addressLine1.invalid">
+                    <p>L'adresse est obligatoire !</p>
+                </div>
+            </div>
+        
+            <div class="form-group">
+                <input #addressLine2="ngModel" name="addressLine2" [(ngModel)]="shipping.addressLine2" type="text" class="form-control">
+            </div>
+        
+            <div class="form-group">
+                <label for="">Code postal</label>
+                <input #postCode="ngModel" name="postCode" [(ngModel)]="shipping.postCode" type="text" class="form-control" required>
+                <div class="alert alert-danger" *ngIf="postCode.touched && postCode.invalid">
+                    <p>Le code postal est obligatoire !</p>
+                </div>
+            </div>
+        
+            <div class="form-group">
+                <label for="">Ville</label>
+                <input #city="ngModel" name="city" [(ngModel)]="shipping.city" type="text" class="form-control" required>
+                <div class="alert alert-danger" *ngIf="city.touched && city.invalid">
+                    <p>La ville est obligatoire !</p>
+                </div>
+            </div>
+        
+            <button class="btn btn-primary" (click)="placeOrder()">Valider la commande</button>
+        </form>
+    </div>
+    <div class="col-12 col-md-6">
+        <shopping-cart-summary [cart]="cart"></shopping-cart-summary>
+    </div>
+</div>
