--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -24,12 +24,12 @@
                     {{ appUser.name }}
                 </a>
                 <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" routerLink="/my/orders">My Orders</a>
+                    <a class="dropdown-item" routerLink="/my/orders">Mes commandes</a>
                     <ng-container *ngIf="appUser.isAdmin">
-                        <a class="dropdown-item" routerLink="admin/orders">Manage Orders</a>
-                        <a class="dropdown-item" routerLink="admin/products">Manage Products</a>
+                        <a class="dropdown-item" routerLink="admin/orders">Gérer les commandes</a>
+                        <a class="dropdown-item" routerLink="admin/products">Gérer les produits</a>
                     </ng-container>
-                    <a class="dropdown-item" (click)="logout()">Log Out</a>
+                    <a class="dropdown-item" style="cursor: pointer;" (click)="logout()">Se déconnecter</a>
                 </div>
             </li>
         </ul>
