--- a/src/app/admin/admin-orders/admin-orders.component.html
+++ b/src/app/admin/admin-orders/admin-orders.component.html
@@ -1,1 +1,27 @@
-<p>admin-orders works!</p>
+<table class="table" [mfData]="orders" #mf="mfDataTable" [mfRowsOnPage]="10">
+    <thead class="thead-light">
+        <tr>
+            <th>Client</th>
+            <th>Date</th>
+            <th>Prix</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let o of mf.data">
+            <td>{{ o.shipping.name }}</td>
+            <td>{{ o.datePlaced | date:'fullDate' }}</td>
+            <td>{{ o.totalPrice | currency:'EUR':'symbol'}}</td>
+            <td>
+                <a [routerLink]="['/my/orders', o.id]">Voir</a>
+            </td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr>
+            <td colspan="4">
+                <mfBootstrapPaginator></mfBootstrapPaginator>
+            </td>
+        </tr>
+    </tfoot>
+</table>
