--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -1,5 +1,5 @@
 <p>
-    <a routerLink="/admin/products/new" class="btn btn-primary">Add a new product</a>
+    <a routerLink="/admin/products/new" class="btn btn-primary">Ajouter un produit</a>
 </p>
 <p>
     <input 
